plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_13
    targetCompatibility = JavaVersion.VERSION_13
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform {
        includeTags 'api', 'debug'
        excludeTags 'disabled'
    }
    jvmArgs += '--enable-preview'

    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}

dependencies {
    testImplementation(
            'org.junit.jupiter:junit-jupiter-api:5.6.2',
            'org.junit.jupiter:junit-jupiter-params:5.6.2',
            'io.rest-assured:rest-assured:4.3.0',
            'io.rest-assured:json-path:4.3.0',
            'com.google.code.gson:gson:2.8.6'
    )
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}
